@@ -15,6 +15,7 @@ DELPHITWAIN CHANGE LOG
           14 Changed Extended to Single (for platform compatibility and for my actual state);
              Added OnTwainAcquire, rOnAcquireProgress in TCustomDelphiTwain;
              changelog in text file.
+	  15 added Native Image Handle to DoTwainAcquire params 
 
 2023/11 MaxM - Fixed various obscurities in code
              Added GetCapabilitySupportedOp
